# address-batch-geocoder

./: .gitignore  README.md  app.py  config_example.yml  csv_to_parquet.py  geocoder.py  main.py  pyproject.toml  requirements.txt  requirements_unhashed.txt
.github/: run_tests.yml
.github/workflows/: release.yml  run_tests_on_merge.yml  run_tests_on_push_and_pr.yml
address_geocoder/: geocoder.py
address_geocoder/utils/: tomtom_lookup.py  zips.py
mapping/: ais_properties_fields.py
powershell/: USER_GUIDE.md  geocoder_for_exe.ps1  requirements.txt
tests/: config_for_tests.yml  sample_file_input.csv  test_address_file.parquet  test_ais_lookup.py  test_end_to_end.py  test_geocoder.py  test_parser.py  test_tomtom_lookup.py
utils/: ais_lookup.py  encoder.py  enrichment_fields.py  parse_address.py  rate_limiter.py  tomtom_lookup.py  zips.py
