[project]
name = "address-geocoder"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.9.0",
    "chardet>=5.2.0",
    "click>=8.1.8",
    "ipython>=8.18.1",
    "passyunk",
    "polars>=1.34.0",
    "pyarrow>=14",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "retrying>=1.4.2",
    "usaddress>=0.5.16",
]

[tool.uv.sources]
passyunk = { git = "https://github.com/CityOfPhiladelphia/passyunk" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
address_geocoder = "address_geocoder.geocoder:main"